[gd_scene load_steps=6 format=3 uid="uid://bjkutpl10vy6w"]

[ext_resource type="StyleBox" uid="uid://b1bvdnbgalbwm" path="res://Ressourcen/Styles/menue_style_box_flat.tres" id="1_dsut7"]
[ext_resource type="Script" path="res://Scene/UserInterface/calc_overview.gd" id="1_w5lhg"]
[ext_resource type="StyleBox" uid="uid://cepxar0wi7s6g" path="res://Ressourcen/Styles/menue_hover_style_box_flat.tres" id="2_70sk8"]
[ext_resource type="StyleBox" uid="uid://cafjxm53n17na" path="res://Ressourcen/Styles/menue_pressed_style_box_flat.tres" id="3_nqqwc"]
[ext_resource type="StyleBox" uid="uid://c05r2rcv5ur6s" path="res://Ressourcen/Styles/black_border.tres" id="5_i67u1"]

[node name="CalcOverview" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_w5lhg")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 30

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Top" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Control" type="Control" parent="MarginContainer/VBoxContainer/Top"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/Top"]
layout_mode = 2
size_flags_horizontal = 6
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "Overview"
horizontal_alignment = 1

[node name="OptionButton" type="OptionButton" parent="MarginContainer/VBoxContainer/Top"]
custom_minimum_size = Vector2(250, 40)
layout_mode = 2
size_flags_horizontal = 8
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_styles/normal = ExtResource("1_dsut7")
theme_override_styles/hover = ExtResource("2_70sk8")
theme_override_styles/pressed = ExtResource("3_nqqwc")
item_count = 1
selected = 0
fit_to_longest_item = false
popup/item_0/text = "Regulation F"
popup/item_0/id = 0

[node name="Control2" type="Control" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(250, 50)
layout_mode = 2

[node name="CoreUI" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 150

[node name="Left" type="VBoxContainer" parent="MarginContainer/VBoxContainer/CoreUI"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.4

[node name="Middle" type="VBoxContainer" parent="MarginContainer/VBoxContainer/CoreUI"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.5

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/CoreUI/Middle"]
layout_mode = 2
alignment = 2

[node name="Filter" type="Button" parent="MarginContainer/VBoxContainer/CoreUI/Middle/HBoxContainer"]
custom_minimum_size = Vector2(109, 0)
layout_mode = 2
size_flags_vertical = 8
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 18
theme_override_styles/normal = ExtResource("5_i67u1")
theme_override_styles/hover = ExtResource("5_i67u1")
theme_override_styles/pressed = ExtResource("5_i67u1")
theme_override_styles/focus = ExtResource("5_i67u1")
text = "Offense"

[node name="Filter2" type="Button" parent="MarginContainer/VBoxContainer/CoreUI/Middle/HBoxContainer"]
custom_minimum_size = Vector2(109, 0)
layout_mode = 2
size_flags_vertical = 8
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 18
theme_override_styles/normal = ExtResource("5_i67u1")
theme_override_styles/hover = ExtResource("5_i67u1")
theme_override_styles/pressed = ExtResource("5_i67u1")
theme_override_styles/focus = ExtResource("5_i67u1")
text = "Defense"

[node name="Filter3" type="Button" parent="MarginContainer/VBoxContainer/CoreUI/Middle/HBoxContainer"]
custom_minimum_size = Vector2(109, 0)
layout_mode = 2
size_flags_vertical = 8
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 18
theme_override_styles/normal = ExtResource("5_i67u1")
theme_override_styles/hover = ExtResource("5_i67u1")
theme_override_styles/pressed = ExtResource("5_i67u1")
theme_override_styles/focus = ExtResource("5_i67u1")
text = "Sp. Defense"

[node name="Filter4" type="Button" parent="MarginContainer/VBoxContainer/CoreUI/Middle/HBoxContainer"]
custom_minimum_size = Vector2(109, 0)
layout_mode = 2
size_flags_vertical = 8
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 18
theme_override_styles/normal = ExtResource("5_i67u1")
theme_override_styles/hover = ExtResource("5_i67u1")
theme_override_styles/pressed = ExtResource("5_i67u1")
theme_override_styles/focus = ExtResource("5_i67u1")
text = "Speed"

[node name="Filter5" type="Button" parent="MarginContainer/VBoxContainer/CoreUI/Middle/HBoxContainer"]
custom_minimum_size = Vector2(109, 0)
layout_mode = 2
size_flags_vertical = 8
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 18
theme_override_styles/normal = ExtResource("5_i67u1")
theme_override_styles/hover = ExtResource("5_i67u1")
theme_override_styles/pressed = ExtResource("5_i67u1")
theme_override_styles/focus = ExtResource("5_i67u1")
text = "Total"

[node name="Control" type="Control" parent="MarginContainer/VBoxContainer/CoreUI/Middle/HBoxContainer"]
custom_minimum_size = Vector2(4, 0)
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer/CoreUI/Middle"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/CoreUI/Middle/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Right" type="VBoxContainer" parent="MarginContainer/VBoxContainer/CoreUI"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.35

[node name="Bottom" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Back" type="Button" parent="MarginContainer/VBoxContainer/Bottom"]
custom_minimum_size = Vector2(150, 60)
layout_mode = 2
size_flags_vertical = 8
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = ExtResource("1_dsut7")
theme_override_styles/hover = ExtResource("2_70sk8")
theme_override_styles/pressed = ExtResource("3_nqqwc")
text = "Go Back"

[node name="Control" type="Control" parent="MarginContainer/VBoxContainer/Bottom"]
layout_mode = 2
size_flags_horizontal = 3

[connection signal="pressed" from="MarginContainer/VBoxContainer/CoreUI/Middle/HBoxContainer/Filter" to="." method="_on_filter_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/CoreUI/Middle/HBoxContainer/Filter2" to="." method="_on_filter_2_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/CoreUI/Middle/HBoxContainer/Filter3" to="." method="_on_filter_3_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/CoreUI/Middle/HBoxContainer/Filter4" to="." method="_on_filter_4_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/CoreUI/Middle/HBoxContainer/Filter5" to="." method="_on_filter_5_pressed"]
